# pnn-citation-rec

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: 00_data_preparation.ipynb  01_data_analysis.ipynb  02_figure_eda_section2.ipynb  03_figure_training_example.ipynb  04_baselines_cosine_mlp.ipynb  10_graphsage_2L.ipynb  11_gat_2L.ipynb  12_gat_3L.ipynb  13_gat_4L.ipynb  14_gat_5L.ipynb  15_gatv2_4L.ipynb  20_hetgat_2L.ipynb  21_hetgat_3L.ipynb  22_hetgat_4L.ipynb  23_hetgat_5L.ipynb  24_rgat_3L.ipynb  30_parameter_counts.ipynb
