[project]
name = "pnn-citation-rec"
version = "0.1.0"
description = "Graph-based citation recommendation prototype"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "torch-geometric>=2.4",
    "numpy>=1.24",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
